--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -74,56 +74,56 @@ $account-sidebar-appearance-theme-button-option-text-color: $dark-gray-level-4;
 $account-sidebar-appearance-theme-button-option-selected-color: $light-blue;
 $list-table-border-color: $gray-level-2;
 // Light/Dark mode (general)
-$mode-text-color-base-light: black; // light in name refers to the mode (not the text color)
-$mode-text-color-base-dark: $tinted-light-gray-level-1; // dark in name refers to the mode (not the text color)
-$mode-text-color-base-disabled-form-input-light: $light-gray-level-10;
-$mode-text-color-base-disabled-form-input-dark: $gray-level-6;
-$mode-hover-background-color-list-row-light: $light-gray-level-2;
-$mode-hover-background-color-list-row-dark: $dark-gray-level-4;
-$mode-selected-background-color-list-row-light: $light-gray-level-6;
-$mode-selected-background-color-list-row-dark: $dark-gray-level-2;
+$mode-home-background-color-light: white;
+$mode-home-background-color-dark: $dark-gray-level-6;
+$mode-home-text-color-light: black;
+$mode-home-text-color-dark: $tinted-light-gray-level-1;
+$mode-list-row-hover-background-color-light: $light-gray-level-2;
+$mode-list-row-hover-background-color-dark: $dark-gray-level-4;
+$mode-list-row-selected-background-color-light: $light-gray-level-6;
+$mode-list-row-selected-background-color-dark: $dark-gray-level-2;
 // Light/Dark mode (specific)
-$mode-background-color-home-light: white;
-$mode-background-color-home-dark: $dark-gray-level-6;
-$mode-background-color-search-filter-sort-top-bar-light: $light-gray-level-5;
-$mode-background-color-search-filter-sort-top-bar-dark: $dark-gray-level-8;
-$mode-background-color-search-filter-sort-top-bar-search-bar-light: $mode-background-color-home-light;
-$mode-background-color-search-filter-sort-top-bar-search-bar-dark: $dark-gray-level-5;
-$mode-text-color-search-filter-sort-top-bar-search-bar-light: $mode-text-color-base-light;
-$mode-text-color-search-filter-sort-top-bar-search-bar-dark: $mode-text-color-base-dark;
-$mode-border-color-search-filter-sort-top-bar-button-light: $mode-text-color-base-light;
-$mode-border-color-search-filter-sort-top-bar-button-dark: $gray-level-1;
-$mode-background-color-search-filter-sort-top-bar-button-light: $mode-background-color-home-light;
-$mode-background-color-search-filter-sort-top-bar-button-dark: $dark-gray-level-4;
-$mode-text-color-search-filter-sort-top-bar-button-light: $mode-text-color-base-light;
-$mode-text-color-search-filter-sort-top-bar-button-dark: $mode-text-color-base-dark;
-$mode-hover-background-color-top-bar-options-dropdown-row-light: $light-gray-level-4;
-$mode-hover-background-color-top-bar-options-dropdown-row-dark: $dark-gray-level-3;
-$mode-background-color-create-item-sidebar-light: $mode-background-color-home-light;
-$mode-background-color-create-item-sidebar-dark: $mode-background-color-home-dark;
-$mode-text-color-base-icon-button-light: $gray-level-2;
-$mode-text-color-base-icon-button-dark: $gray-level-10;
-$mode-text-color-more-distinct-icon-button-light: $gray-level-5;
-$mode-text-color-more-distinct-icon-button-dark: $dark-gray-level-1;
-$mode-hover-text-color-base-icon-button-light: $dark-gray-level-4;
-$mode-hover-text-color-base-icon-button-dark: $gray-level-3;
-$mode-hover-text-color-more-distinct-icon-button-light: $mode-hover-text-color-base-icon-button-light;
-$mode-hover-text-color-more-distinct-icon-button-dark: $gray-level-5;
-$mode-border-color-base-form-input-light: $gray-level-5;
-$mode-border-color-base-form-input-dark: $dark-gray-level-10;
-$mode-background-color-base-form-input-light: $light-gray-level-5;
-$mode-background-color-base-form-input-dark: $gray-level-10;
-$mode-background-color-base-disabled-form-input-light: $mode-background-color-create-item-sidebar-light;
-$mode-background-color-base-disabled-form-input-dark: $mode-background-color-create-item-sidebar-dark;
-$mode-background-color-item-view-item-box-light: $light-gray-level-5;
-$mode-background-color-item-view-item-box-dark: $dark-gray-level-8;
+$mode-search-filter-sort-top-bar-background-color--light: $light-gray-level-5;
+$mode-search-filter-sort-top-bar-background-color--dark: $dark-gray-level-8;
+$mode-search-filter-sort-top-bar-background-color--search-bar-light: $mode-home-background-color-light;
+$mode-search-filter-sort-top-bar-background-color--search-bar-dark: $dark-gray-level-5;
+$mode-search-filter-sort-top-bar-text-color-search-bar-light: $mode-home-text-color-light;
+$mode-search-filter-sort-top-bar-text-color-search-bar-dark: $mode-home-text-color-dark;
+$mode-search-filter-sort-top-bar-border-color-button-light: $mode-home-text-color-light;
+$mode-search-filter-sort-top-bar-border-color-button-dark: $gray-level-1;
+$mode-search-filter-sort-top-bar-background-color--button-light: $mode-home-background-color-light;
+$mode-search-filter-sort-top-bar-background-color--button-dark: $dark-gray-level-4;
+$mode-search-filter-sort-top-bar-text-color-button-light: $mode-home-text-color-light;
+$mode-search-filter-sort-top-bar-text-color-button-dark: $mode-home-text-color-dark;
+$mode-top-bar-options-dropdown-row-hover-background-color-light: $light-gray-level-4;
+$mode-top-bar-options-dropdown-row-hover-background-color-dark: $dark-gray-level-3;
+$mode-create-item-sidebar-background-color-light: $mode-home-background-color-light;
+$mode-create-item-sidebar-background-color-dark: $mode-home-background-color-dark;
+$mode-base-icon-button-text-color-light: $gray-level-2;
+$mode-base-icon-button-text-color-dark: $gray-level-10;
+$mode-base-icon-button-hover-text-color-light: $dark-gray-level-4;
+$mode-base-icon-button-hover-text-color-dark: $gray-level-3;
+$mode-more-distinct-icon-button-text-color-light: $gray-level-5;
+$mode-more-distinct-icon-button-text-color-dark: $dark-gray-level-1;
+$mode-more-distinct-icon-button-hover-text-color-light: $mode-base-icon-button-hover-text-color-light;
+$mode-more-distinct-icon-button-hover-text-color-dark: $gray-level-5;
+$mode-create-item-form-input-border-color-light: $gray-level-5;
+$mode-create-item-form-input-border-color-dark: $dark-gray-level-10;
+$mode-create-item-form-input-background-color-light: $light-gray-level-5;
+$mode-create-item-form-input-background-color-dark: $gray-level-10;
+$mode-create-item-form-input-disabled-background-color-light: $mode-create-item-sidebar-background-color-light;
+$mode-create-item-form-input-disabled-background-color-dark: $mode-create-item-sidebar-background-color-dark;
+$mode-create-item-form-input-disabled-text-color-light: $light-gray-level-10;
+$mode-create-item-form-input-disabled-text-color-dark: $gray-level-6;
+$mode-item-view-item-box-background-color-light: $light-gray-level-5;
+$mode-item-view-item-box-background-color-dark: $dark-gray-level-8;
 // Themes
-$theme-background-color-teal-dark: $dark-teal;
-$theme-background-color-teal-light: $teal;
-$theme-text-color-teal: #2588b3;
-$theme-background-color-blue-dark: $darker-navy-blue;
-$theme-background-color-blue-light: $lighter-navy-blue;
-$theme-text-color-blue: #245ba3;
+$theme-teal-background-color-dark: $dark-teal;
+$theme-teal-background-color-light: $teal;
+$theme-teal-text-color: #2588b3;
+$theme-blue-background-color-dark: $darker-navy-blue;
+$theme-blue-background-color-light: $lighter-navy-blue;
+$theme-blue-text-color: #245ba3;
 // Status colors
 $status-gray: $gray-level-3;
 $status-blue: #568dd5;
