--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -78,25 +78,27 @@ $mode-home-background-color-light: white;
 $mode-home-background-color-dark: $dark-gray-level-6;
 $mode-home-text-color-light: black;
 $mode-home-text-color-dark: $tinted-light-gray-level-1;
+$mode-checkbox-background-color-light: white;
+$mode-checkbox-background-color-dark: $dark-gray-level-2;
 $mode-list-row-hover-background-color-light: $light-gray-level-2;
 $mode-list-row-hover-background-color-dark: $dark-gray-level-4;
 $mode-list-row-selected-background-color-light: $light-gray-level-6;
 $mode-list-row-selected-background-color-dark: $dark-gray-level-2;
 // Light/Dark mode (specific)
-$mode-search-filter-sort-top-bar-background-color--light: $light-gray-level-5;
-$mode-search-filter-sort-top-bar-background-color--dark: $dark-gray-level-8;
-$mode-search-filter-sort-top-bar-background-color--search-bar-light: $mode-home-background-color-light;
-$mode-search-filter-sort-top-bar-background-color--search-bar-dark: $dark-gray-level-5;
-$mode-search-filter-sort-top-bar-text-color-search-bar-light: $mode-home-text-color-light;
-$mode-search-filter-sort-top-bar-text-color-search-bar-dark: $mode-home-text-color-dark;
-$mode-search-filter-sort-top-bar-border-color-button-light: $mode-home-text-color-light;
-$mode-search-filter-sort-top-bar-border-color-button-dark: $gray-level-1;
-$mode-search-filter-sort-top-bar-background-color--button-light: $mode-home-background-color-light;
-$mode-search-filter-sort-top-bar-background-color--button-dark: $dark-gray-level-4;
-$mode-search-filter-sort-top-bar-text-color-button-light: $mode-home-text-color-light;
-$mode-search-filter-sort-top-bar-text-color-button-dark: $mode-home-text-color-dark;
-$mode-top-bar-options-dropdown-row-hover-background-color-light: $light-gray-level-4;
-$mode-top-bar-options-dropdown-row-hover-background-color-dark: $dark-gray-level-3;
+$mode-top-bar-background-color-light: $light-gray-level-5;
+$mode-top-bar-background-color-dark: $dark-gray-level-8;
+$mode-top-bar-background-color-search-bar-light: $mode-home-background-color-light;
+$mode-top-bar-background-color-search-bar-dark: $dark-gray-level-5;
+$mode-top-bar-text-color-search-bar-light: $mode-home-text-color-light;
+$mode-top-bar-text-color-search-bar-dark: $mode-home-text-color-dark;
+$mode-top-bar-border-color-button-light: $mode-home-text-color-light;
+$mode-top-bar-border-color-button-dark: $gray-level-1;
+$mode-top-bar-background-color-button-light: $mode-home-background-color-light;
+$mode-top-bar-background-color-button-dark: $dark-gray-level-4;
+$mode-top-bar-text-color-button-light: $mode-home-text-color-light;
+$mode-top-bar-text-color-button-dark: $mode-home-text-color-dark;
+$mode-item-view-top-bar-options-dropdown-row-hover-background-color-light: $light-gray-level-4;
+$mode-item-view-top-bar-options-dropdown-row-hover-background-color-dark: $dark-gray-level-3;
 $mode-create-item-sidebar-background-color-light: $mode-home-background-color-light;
 $mode-create-item-sidebar-background-color-dark: $mode-home-background-color-dark;
 $mode-base-icon-button-text-color-light: $gray-level-2;
