--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTopBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewTopBar.scss
@@ -1,8 +1,8 @@
 @use "../../../utils/variables" as v;
 @use "../../../utils/mixins" as m;
 
-.search-filter-sort-component,
-.js-calc-search-filter-sort-component {
+.list-view-top-bar,
+.js-calc-list-view-top-bar {
 	// Must be more than table header so filter button can overlap
 	z-index: 1;
 	position: fixed;
@@ -10,7 +10,7 @@
 	border: v.$search-filter-sort-bar-border-width solid black;
 	border-left: none;
 	border-right: none;
-	background-color: v.$mode-search-filter-sort-top-bar-background-color--light;
+	background-color: v.$mode-top-bar-background-color-light;
 	height: v.$search-filter-sort-bar-height;
 	width: 100%;
 	font-family: Arial, Helvetica, sans-serif;
@@ -28,12 +28,12 @@
 		@include m.vertical-center();
 
 		left: 30px;
-		border: v.$search-top-bar-base-button-border-width solid v.$mode-search-filter-sort-top-bar-border-color-button-light;
+		border: v.$search-top-bar-base-button-border-width solid v.$mode-top-bar-border-color-button-light;
 		border-radius: v.$search-top-bar-buttton-border-radius;
-		background-color: v.$mode-search-filter-sort-top-bar-background-color--button-light;
+		background-color: v.$mode-top-bar-background-color-button-light;
 		height: v.$search-filter-sort-bar-button-height;
 		width: 110px;
-		color: v.$mode-search-filter-sort-top-bar-text-color-button-light;
+		color: v.$mode-top-bar-text-color-button-light;
 		font-size: v.$search-filter-sort-bar-button-font-size;
 		text-align: center;
 		cursor: pointer;
@@ -72,7 +72,7 @@
 		border: v.$list-search-bar-button-border-width solid black;
 		border-radius: v.$search-top-bar-buttton-border-radius 0 0 v.$search-top-bar-buttton-border-radius;
 		padding: 0px v.$list-item-search-bar-padding 0px v.$list-item-search-bar-padding;
-		background-color: v.$mode-search-filter-sort-top-bar-background-color--search-bar-light;
+		background-color: v.$mode-top-bar-background-color-search-bar-light;
 		height: v.$list-item-search-bar-height;
 		line-height: v.$list-item-search-bar-height;
 		// Width changed by JS
@@ -130,12 +130,12 @@
 		position: absolute;
 		top: 9px;
 		right: 30px;
-		border: v.$search-top-bar-base-button-border-width solid v.$mode-search-filter-sort-top-bar-border-color-button-light;
+		border: v.$search-top-bar-base-button-border-width solid v.$mode-top-bar-border-color-button-light;
 		border-radius: v.$search-top-bar-buttton-border-radius;
-		background-color: v.$mode-search-filter-sort-top-bar-background-color--button-light;
+		background-color: v.$mode-top-bar-background-color-button-light;
 		height: v.$search-filter-sort-bar-button-height;
 		width: v.$search-top-bar-filter-button-width;
-		color: v.$mode-search-filter-sort-top-bar-text-color-button-light;
+		color: v.$mode-top-bar-text-color-button-light;
 		font-size: v.$search-filter-sort-bar-button-font-size;
 		text-align: center;
 		cursor: pointer;
